data/all_generated_tests/raw_wast_tests/block_MismanagementofBlockNesting_2254.wast
;; 5. **Test Description**: Create a deeply nested block hierarchy with multiple branching instructions (`br`, `br_if`, `br_table`) aimed at various block levels. The expected outcome tests for correct block and branch resolution.    - **Constraint**: Confirm the robustness of deep nesting and branch resolution to respective blocks.    - **Nesting Mismanagement Check**: Tests accurate handling of deep nesting with multiple branching instructions.

(assert_invalid
  (module (func (result i32)
    (block (result i32)
      (block (result i32)
        (block (result i32)
          (block (result i32) 
            (block (result i32)
              (block (result i32)
                (br 5 (i32.const 1))
              )
              (br 4 (i64.const 1))
            )
            (br 3 (i64.const 1))
          )
          (br 2 (i32.const 1))
        )
        (br 1 (i64.const 1))
      )
      (br 0 (i32.const 1))
    )
  ))
  "type mismatch"
)